--- a/manager/makefile
+++ b/manager/makefile
@@ -2,6 +2,8 @@
 SRC += ../config/comconfig.cpp
 SRC += ../config/varconfig.cpp
 SRC += ../comserver/comserver.cpp
+SRC += ../comserver/comreader.cpp
+SRC += ../uart/comport.cpp
 SRC += ../tcpserver/modbustcp.cpp
 SRC += ../tcpserver/tcpserver.cpp
 
