--- a/manager/makefile
+++ b/manager/makefile
@@ -3,12 +3,14 @@ SRC += ../config/comconfig.cpp
 SRC += ../config/varconfig.cpp
 SRC += ../comserver/comserver.cpp
 SRC += ../comserver/comreader.cpp
+SRC += ../comserver/storage.cpp
 SRC += ../uart/comport.cpp
 SRC += ../tcpserver/modbustcp.cpp
 SRC += ../tcpserver/tcpserver.cpp
 
-test: $(SRC) *.cpp  
-	$(CC) $(CFLAG) $(LDFAGS) $+
+comserver: $(SRC) *.cpp  
+	$(CC) $(CFLAG) $(LDFAGS) $+ -o $@ 
+	$(STRIP) -s $@
 
 clean:
-	@rm -rfv a.out
+	@rm -rfv comserver
