--- a/manager/makefile
+++ b/manager/makefile
@@ -8,6 +8,7 @@ SRC += ../uart/comport.cpp
 SRC += ../tcpserver/modbustcp.cpp
 SRC += ../tcpserver/tcpserver.cpp
 SRC += ../tcpserver/jsonserver.cpp
+SRC += ../tcpserver/debugserver.cpp
 
 comserver: $(SRC) *.cpp  
 	$(CC) $(CFLAG) $(LDFAGS) $+ -o $@ 
